Fix the grid issue in our-stitches.html
Fixed the issue with the grid items overflowing from the grid container and overlapping the footer unless additional margin/padding is added.

--- a/css/styles.css
+++ b/css/styles.css
@@ -351,22 +351,22 @@ footer a {
 /* stitches section */
 
 #stitches {
-    padding-bottom: 90px;
+    padding-bottom: 50px;
 }
 
 #stitches-grid {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     justify-content: space-around;
     align-items: center;
-    gap: 5%;
-    margin-bottom: 50px;
+    column-gap: 5%;
+    row-gap: 50px;
 }
 
 .stitches-griditem {
     height: 300px;
-    background: url("../assets/1.jpg") no-repeat center center;
+    background: red;
     border-radius: 40px;
     display: grid;
     align-items: end;
